chapter3/exercise_2.1/manifests/deployment-logoutput.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logoutput-dep
  namespace: exercises
spec:
  replicas: 1
  selector:
    matchLabels:
      app: logoutput
  template:
    metadata:
      labels:
        app: logoutput
    spec:
      containers:
      - image: logoutput:latest
        imagePullPolicy: Never
        name: logtoutput
