chapter3/exercise_2.1/manifests/deployment-pingpong.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pingpong-dep
  namespace: exercises
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pingpong
  template:
    metadata:
      labels:
        app: pingpong
    spec:
      containers:
      - image: pingpong:latest
        imagePullPolicy: Never
        name: pingpong
