chapter3/exercise_2.1/manifests/service-pingpong.yaml
apiVersion: v1
kind: Service
metadata:
  name: pingpong-svc
  namespace: exercises
spec:
  type: ClusterIP
  selector:
    app: pingpong
  ports:
    - port: 2346
      protocol: TCP
      targetPort: 3001
